--- a/css/style.css
+++ b/css/style.css
@@ -362,6 +362,8 @@ float: right;
   margin: 20px 0 30px 0;
 -webkit-clip-path: polygon(0 1%, 100% 0, 100% 100%, 0 98%);
 clip-path: polygon(0 1%, 100% 0, 100% 100%, 0 98%);
+  margin-left: 0;
+  margin-right: 0;
 }
 
 #aboutContent { 
