--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,8 @@ body {
 header {
   background: black;
   text-align: center;
-  margin-left: 0;
-  margin-right: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 h1 {
@@ -145,6 +145,8 @@ a:active{
   background-color: black;
   border: none;
   font-family: "VoltaT";
+  margin-right: 0;
+  margin-left: 0;
 
 }
 
