--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,12 @@ clip-path: polygon(0 1%, 100% 0, 100% 100%, 0 98%);
   margin: 10px auto 30px auto;
 }
 
+@media only screen and (max-width: 800px) {
+    #me img {
+        width: 300px;
+    }
+}
+
 #contact {
   text-align: center;
   display: block;
