--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,12 @@ h1 {
   margin-bottom: 0;
 }
 
+@media only screen and (max-width: 800px) {
+    h1 {
+        font-size: 4em;
+    }
+}
+
 h1 a:link {
   color: #ff8080;
   text-decoration: none;
