--- a/css/style.css
+++ b/css/style.css
@@ -433,7 +433,7 @@ clip-path: polygon(0 7%, 100% 0, 100% 100%, 0 95%);
   background-color: #809603;
   font-size: 2em;
   margin: 30px auto 30px auto;
-  padding: 30px 0 30px 0;
+  padding: 30px 20px 30px 20px;
  
 }
 
