--- a/css/style.css
+++ b/css/style.css
@@ -427,6 +427,18 @@ clip-path: polygon(0 9%, 100% 0, 100% 100%, 0 100%);
 }
 
 @media only screen and (max-width: 800px) {
+    #tagline {
+        font-size: 3em;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    #blurb p{
+        font-size: 3em;
+    }
+}
+
+@media only screen and (max-width: 800px) {
     #star {
         font-size: 3em;
     }
