--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,7 @@ clip-path: polygon(0 7%, 100% 0, 100% 100%, 0 95%);
   font-size: 2em;
   margin: 30px auto 30px auto;
   padding: 30px 20px 30px 20px;
+  word-wrap: break-word;
  
 }
 
