--- a/css/style.css
+++ b/css/style.css
@@ -430,6 +430,13 @@ clip-path: polygon(0 9%, 100% 0, 100% 100%, 0 100%);
 @media only screen and (max-width: 800px) {
     #tagline {
         line-height: 0.3em;
+        margin-top: 20px;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    #blurb p {
+      font-size: 4em;
     }
 }
 
@@ -462,5 +469,11 @@ clip-path: polygon(0 9%, 100% 0, 100% 100%, 0 100%);
 @media only screen and (max-width: 800px) {
     #me img {
         width: 300px;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    p {
+        font-size: 1em;
     }
 }
