--- a/css/style.css
+++ b/css/style.css
@@ -417,14 +417,14 @@ clip-path: polygon(0 9%, 100% 0, 100% 100%, 0 100%);
 
 
 @media only screen and (max-width: 800px) {
-    p {
+    body {
         font-size: 1em;
     }
 }
 
 @media only screen and (max-width: 800px) {
     h1 {
-        font-size: 5em;
+        font-size: 4em;
     }
 }
 
