--- a/css/style.css
+++ b/css/style.css
@@ -481,3 +481,8 @@ clip-path: polygon(0 9%, 100% 0, 100% 100%, 0 100%);
     }
 }
 
+@media only screen and (max-width: 800px) {
+    .figure-caption {
+        padding-right: 50px;
+    }
+}
