--- a/css/style.css
+++ b/css/style.css
@@ -473,11 +473,19 @@ clip-path: polygon(0 9%, 100% 0, 100% 100%, 0 100%);
     }
 }
 
+@media only screen and (max-width: 800px) {
+    #spiel {
+        margin-bottom: 10px;
+        padding-bottom: 10px;
+    }
+}
+
 
 @media only screen and (max-width: 800px) {
     #me img {
         width: 250px;
         padding-right: 50px;
+        margin-top: 0;
     }
 }
 
