--- a/css/style.css
+++ b/css/style.css
@@ -475,8 +475,8 @@ clip-path: polygon(0 9%, 100% 0, 100% 100%, 0 100%);
 
 @media only screen and (max-width: 800px) {
     #spiel {
-        margin-bottom: 10px;
-        padding-bottom: 10px;
+        margin-bottom: 0;
+        padding-bottom: 0;
     }
 }
 
@@ -486,6 +486,7 @@ clip-path: polygon(0 9%, 100% 0, 100% 100%, 0 100%);
         width: 250px;
         padding-right: 50px;
         margin-top: 0;
+        padding-top: 0;
     }
 }
 
