--- a/css/style.css
+++ b/css/style.css
@@ -419,6 +419,7 @@ clip-path: polygon(0 9%, 100% 0, 100% 100%, 0 100%);
 @media only screen and (max-width: 800px) {
     body {
         font-size: 1em;
+        text-align: justify;
     }
 }
 
